--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,29 @@
-qemu (0.12.5+dfsg-3skerlet1) unstable; urgency=low
+qemu (0.12.5+dfsg-3squeeze3) stable-security; urgency=low
 
-  * Drop openbios-sparc dependency because it cannot be usable.
+  * CVE-2012-6075 fix (Closes: #696051):
+    e1000-discard-packets-that-are-too-long-if-not-SBP-and-not-LPE.patch
+    e1000-discard-oversized-packets-based-on-SBP_LPE.patch
 
- -- Skerlet Project Team <skerlet@swc.toshiba.co.jp>  Tue, 10 Jan 2012 13:52:38 +0900
+ -- Michael Tokarev <mjt@tls.msk.ru>  Mon, 14 Jan 2013 12:58:32 +0400
+
+qemu (0.12.5+dfsg-3squeeze2) squeeze-security; urgency=low
+
+  * block-prevent-snapshot-mode-TMPDIR-symlink-attack-CVE-2012-2652.patch
+    upstream fix for CVE-2012-2652, symlink attacks in snapshot mode.
+    (Closes: #678280)
+  * console-bounds-check-whenever-changing-the-cursor-CVE-2012-3515.patch
+    upstream fix for CVE-2012-3515, VT100 emulation vulnerability.
+    (Closes: #686973)
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 08 Sep 2012 10:05:17 +0400
+
+qemu (0.12.5+dfsg-3squeeze1) squeeze-proposed-updates; urgency=low
+
+  * Don't register qemu-mips(el) with binfmt on mips(el).  Closes:
+    #618369.
+  * mips hosts: fix branch target change during code retranslation.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 17 Mar 2011 22:38:30 +0100
 
 qemu (0.12.5+dfsg-3) unstable; urgency=medium
 
