--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+qemu (1:2.1+dfsg-12) jessie-security; urgency=high
+
+  * CVE-2015-1779 (#781250) fix from upstream (Closes: #781250)
+  * ide-correct-handling-of-malformed-short-PRDTs-CVE-2014-9718.patch
+    (Closes: CVE-2014-9718)
+  * CVE-2015-2756-xen-limit-guest-control-of-PCI-command-register.patch
+    (Closes: CVE-2015-2756)
+  * fdc-force-the-fifo-access-to-be-in-bounds-CVE-2015-3456.patch
+    (Closes: CVE-2015-3456)
+  * fix the OSABI binfmt mask for x86_64 arch, to actually fix #763043.
+    Original fix didn't work, because "someone" forgot arithmetics.
+    (Really Closes: #763043)
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Fri, 08 May 2015 10:35:03 +0300
+
 qemu (1:2.1+dfsg-11) unstable; urgency=medium
 
   * bump epoch and reupload to cancel 2.2+dfsg-1exp upload
