--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+qemu (1:2.1+dfsg-12+deb8u1) jessie-security; urgency=high
+
+  * slirp-use-less-predictable-directory-name-in-tmp-CVE-2015-4037.patch
+    (Closes: CVE-2015-4037)
+  * 11 patches for XEN PCI pass-through issues
+    (Closes: #787547 CVE-2015-4103 CVE-2015-4104 CVE-2015-4105 CVE-2015-4106)
+  * pcnet-force-buffer-access-to-be-in-bounds-CVE-2015-3209.patch
+    with preparation bugfix pcnet-fix-negative-array-index-read.patch
+    from upstream (Closes: #788460 CVE-2015-3209)
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Thu, 11 Jun 2015 20:17:04 +0300
+
 qemu (1:2.1+dfsg-12) jessie-security; urgency=high
 
   * CVE-2015-1779 (#781250) fix from upstream (Closes: #781250)
