--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+qemu (1:2.1+dfsg-12+deb8u2) jessie-security; urgency=high
+
+  * Non-maintainer upload by the Security Team.
+  * Add 0001-i8254-fix-out-of-bounds-memory-access-in-pit_ioport_.patch patch.
+    CVE-2015-3214: i8254: out-of-bounds memory access in pit_ioport_read
+    function. (Closes: #795461)
+  * Add patches to address heap overflow when processing ATAPI commands.
+    CVE-2015-5154: heap overflow during I/O buffer memory access.
+    (Closes: #793811)
+  * Add CVE-2015-5225.patch patch.
+    CVE-2015-5225: vnc: heap memory corruption in
+    vnc_refresh_server_surface. (Closes: #796465)
+  * Add 0001-virtio-serial-fix-ANY_LAYOUT.patch patch.
+    CVE-2015-5745: buffer overflow in virtio-serial. (Closes: #795087)
+  * Add patches for CVE-2015-5165.
+    CVE-2015-5165: rtl8139 uninitialized heap memory information leakage to
+    guest. (Closes: #794610)
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 29 Aug 2015 16:12:31 +0200
+
 qemu (1:2.1+dfsg-12+deb8u1) jessie-security; urgency=high
 
   * slirp-use-less-predictable-directory-name-in-tmp-CVE-2015-4037.patch
