--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+qemu (1:2.1+dfsg-12+deb8u10) jessie-security; urgency=high
+
+  * Non-maintainer upload by the LTS Team.
+  * CVE-2019-6778: slirp: heap buffer overflow in tcp_emu()
+    (Closes: #921525).
+  * CVE-2018-16872: mtp: symlink attack in the usb_mtp_object_readdir
+    function, potentially leading to information disclosure
+    (Closes: #916397).
+  * CVE-2018-12617: integer overflow causing large memory allocation
+    and subsequent null pointer dereference (Closes: #902725).
+
+ -- Hugo Lefeuvre <hle@debian.org>  Tue, 26 Feb 2019 09:53:23 +0100
+
 qemu (1:2.1+dfsg-12+deb8u9) jessie-security; urgency=high
 
   * Non-maintainer upload by the LTS Team.
