--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+qemu (1:2.1+dfsg-12+deb8u14) jessie-security; urgency=medium
+
+  * Non-maintainer upload by the LTS team.
+  * CVE-2020-1711: oob heap buffer access in the iSCSI block driver.
+  * CVE-2020-8608: oob heap buffer access in the SLiRP network implementation
+    due to unsafe snprintf usage.
+
+ -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 14 Mar 2020 15:20:17 +0100
+
 qemu (1:2.1+dfsg-12+deb8u13) jessie-security; urgency=high
 
   * Non-maintainer upload by the LTS team.
